# day_wallet

./: .dockerignore  .env.example  .gitignore  Makefile  docker-compose.yml
backend/: Dockerfile  db.sqlite3  entrypoint.sh  pyproject.toml
backend/backend_app/: asgi.py  responses.py  settings.py  urls.py  values.py
backend/day_wallet/: admin.py  apps.py  errors.py  initial.py  models.py  serializers.py  service.py  views.py
backend/day_wallet/migrations/: 0001_initial.py  0002_appuser_db_password.py  0003_appsettings.py
backend/fasti/: package.json  pnpm-lock.yaml
backend/fasti/src/: app.ts
backend/fasti/src/plugins/: sensible.ts
couchdb/: Dockerfile  local.ini
default/: package-lock.json  package.json
frontend/: Dockerfile
frontend/front_app/: README.md  package.json  pnpm-lock.yaml  quasar.config.ts  tsconfig.json
frontend/front_app/.cursor/rules/: frontend-rules.mdc
frontend/front_app/envs/: .env.dev  .env.prod  defaults.ts  env_parser.ts
frontend/front_app/src/: App.vue  config.ts  env.d.ts
frontend/front_app/src/api/: auth.ts  index.ts
frontend/front_app/src/boot/: init_app.ts
frontend/front_app/src/css/: app.scss  quasar.variables.scss
frontend/front_app/src/layouts/: MainLayout.vue
frontend/front_app/src/models/: app.ts  database.ts  period_doc.ts  (+2 more)
frontend/nginx/: nginx.conf
minimum/: app.json  package-lock.json  package.json
minimum/android/: settings.gradle
minimum/android/app/: build.gradle
minimum/ios/: Podfile
minimum/ios/minimum.xcodeproj/: project.pbxproj
native_app/: app.json  package-lock.json  package.json
(+46 files in other folders)
