[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13.8"
dependencies = [
    "django>=5.2.7",
    "django-cors-headers>=4.9.0",
    "djangorestframework>=3.16.1",
    "granian[reload]>=2.5.5",
    "httpx>=0.28.1",
    "python-dotenv>=1.1.1",
]
